--- a/spa.html
+++ b/spa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title></title>
 	<!-- stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/spa.css">
